--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -27,3 +27,6 @@ jobs:
       - name: Run `packer validate`
         id: validate
         run: "packer validate ./image.pkr.hcl"
+        
+      - name: Configure Packer
+        run: "ls -altr"
