--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Configure Packer
         run: |
               echo 'PACKER_LOG=1' >> $GITHUB_ENV
-              echo 'PACKER_LOG_PATH="packerlog.txt"' >> $GITHUB_ENV
+              echo 'PACKER_LOG_PATH=packerlog.txt' >> $GITHUB_ENV
 
       - name: Run `packer init`
         id: init
