--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -13,6 +13,7 @@ jobs:
          uses: actions/checkout@v3
          with: 
             repository: RachitGupta008/packer-cred
+            token: ${{ secrets.CRED_TOKEN }}
           
          
          
