--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -14,9 +14,14 @@ jobs:
          with: 
             repository: RachitGupta008/packer-cred
             token: ${{ secrets.CRED_TOKEN }}
+      
+      - name: Configure Packer
+        run: |
+              ls -altr
+              cp burner-racgupta1-a7fbf41ed076.json /home/runner/work/packer-pipeline/burner-racgupta1-a7fbf41ed076.json
           
          
-         
+       
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -28,9 +33,10 @@ jobs:
       
       - name: Configure Packer
         run: |
-              ls
+              ls -altr
               echo 'PACKER_LOG=1' >> $GITHUB_ENV
               echo 'PACKER_LOG_PATH=packerlog.txt' >> $GITHUB_ENV
+              ls /home/runner/work/packer-pipeline/ -altr
 
       - name: Run `packer init`
         id: init
