--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -50,8 +50,11 @@ jobs:
         id: build
         run: "packer build -debug -timestamp-ui ./image.pkr.hcl"
         
-      - name: List Directory
-        run: "ls -altr"
+      - name: List Summanry
+        run: |
+              IMG_NAME=$(cat packerlog.txt | sed -n -e "s/^.*A disk image was created //p")
+              echo $IMG_NAME
+              echo "Image Created $IMG_NAME" >> $GITHUB_STEP_SUMMARY
         
       - name: Step 3 - Use the Upload Artifact GitHub Action
         uses: actions/upload-artifact@v2
