--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
               ls -altr
               echo 'PACKER_LOG=1' >> $GITHUB_ENV
-              echo 'PACKER_LOG_PATH=packerlog.txt' >> $GITHUB_ENV
+              echo 'PACKER_LOG_PATH=packer-log.txt' >> $GITHUB_ENV
               ls /home/runner/work/packer-pipeline/ -altr
 
       - name: Run `packer init`
@@ -52,7 +52,7 @@ jobs:
         
       - name: List Summanry
         run: |
-              IMG_NAME=$(cat packerlog.txt | sed -n -e "s/^.* A disk image was created: //p")
+              IMG_NAME=$(cat packer-log.txt | sed -n -e "s/^.* A disk image was created: //p")
               echo $IMG_NAME
               echo "Image Created $IMG_NAME" >> $GITHUB_STEP_SUMMARY
         
