--- a/.github/workflows/call-packer.yml
+++ b/.github/workflows/call-packer.yml
@@ -6,4 +6,5 @@ jobs:
           uses: RachitGupta008/packer-pipeline/.github/workflows/packer.yml@main
           with: 
               build-path: 'hello'
+          secrets: inherit
   
