--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -44,14 +44,17 @@ jobs:
               ls -altr
               echo 'PACKER_LOG=1' >> $GITHUB_ENV
               echo 'PACKER_LOG_PATH=${{ inputs.build-path }}/packer-output.txt' >> $GITHUB_ENV
-              mkdir ${{ inputs.build-path }}
               ls /home/runner/work/packer-pipeline/ -altr
       - name: Packer fmt
-        run: "packer fmt -recursive ."
+        run: |
+              cd ${{ inputs.build-path }}
+              packer fmt -recursive .
 
       - name: Run `packer init`
         id: init
-        run: "packer init ./image.pkr.hcl"
+        run: |
+              cd ${{ inputs.build-path }}
+              packer init ./image.pkr.hcl
         
       #- name: BUILD
       #  id: build
