--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -37,7 +37,7 @@ jobs:
         uses: hashicorp/setup-packer@main
         id: setup
         with:
-          version: "1.8.3" # or `latest`
+          version: "latest" # or `latest`
       
       - name: Configure Packer
         run: |
