--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
               ls -altr
               echo 'PACKER_LOG=1' >> $GITHUB_ENV
-              echo 'PACKER_LOG_PATH=${{ inputs.build-path }}/packer-output.txt' >> $GITHUB_ENV
+              echo 'PACKER_LOG_PATH=packer-output.txt' >> $GITHUB_ENV
               ls /home/runner/work/packer-pipeline/ -altr
       - name: Packer fmt
         run: |
