--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -62,8 +62,9 @@ jobs:
         
       - name: List Summanry
         run: |
-              ls
               cd ${{ inputs.build-path }}
+              ls -altr
+              
               IMG_NAME=$(cat packer-log.txt | sed -n -e "s/^.* A disk image was created: //p")
               echo $IMG_NAME
               echo "Image Created $IMG_NAME" >> $GITHUB_STEP_SUMMARY
