--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -76,10 +76,12 @@ jobs:
         run: |
               cd ${{ inputs.build-path }}
               ls -altr
-              ZONE=$(cat packer-output.txt | sed 's/.*Instance: \([^ ]*\).*/\1/')
-              VM_NAME=$(cat packer-output.txt | sed -n -e "s/^.*started in //p")
+              VM_NAME=$(cat packer-output.txt | sed -n 's/.*Instance: \([^ ]*\).*/\1/p')
+              ZONE=$(cat packer-output.txt | sed -n -e "s/^.*started in //p")
               echo $VM_NAME
               echo $ZONE
+              gcloud compute instances delete $VM_NAME --zone $ZONE
+              gcloud compute disks delete $VM_NAME --zone $ZONE
               
       - name: Step 3 - Use the Upload Artifact GitHub Action
         uses: actions/upload-artifact@v2
