--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -80,8 +80,8 @@ jobs:
               ZONE=$(cat packer-output.txt | sed -n -e "s/^.*started in //p")
               echo $VM_NAME
               echo $ZONE
-              gcloud compute instances delete $VM_NAME --zone $ZONE
-              gcloud compute disks delete $VM_NAME --zone $ZONE
+              gcloud compute instances delete $VM_NAME --zone="${ZONE}"
+              gcloud compute disks delete $VM_NAME --zone="${ZONE}"
               
       - name: Step 3 - Use the Upload Artifact GitHub Action
         uses: actions/upload-artifact@v2
