--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -77,10 +77,10 @@ jobs:
               cd ${{ inputs.build-path }}
               ls -altr
               VM_NAME=$(cat packer-output.txt | sed -n 's/.*Instance: \([^ ]*\).*/\1/p')
-              ZONE=$(cat packer-output.txt | sed -n -e "s/^.*started in //p")
+              ZONE=$(cat packer-output.txt | sed -n 's/^.*started in //p')
               echo $VM_NAME
               echo $ZONE
-              gcloud compute instances delete $VM_NAME --zone=us-central1-a --quiet
+              gcloud compute instances delete $VM_NAME --zone=$ZONE --quiet
               gcloud compute disks delete $VM_NAME --zone="${ZONE}" --quiet
               
       - name: Step 3 - Use the Upload Artifact GitHub Action
