--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -80,9 +80,10 @@ jobs:
               ZONE_ID=$(cat packer-output.txt | sed -n 's/^.*started in //p')
               echo $VM_NAME
               echo $ZONE_ID
+              gcloud config set compute/zone $ZONE_ID
               echo GCP_PROJECT
-              gcloud compute instances delete $VM_NAME --project=$GCP_PROJECT --zone=$ZONE_ID --quiet
-              gcloud compute disks delete $VM_NAME --project=$GCP_PROJECT --zone="$ZONE_ID" --quiet
+              gcloud compute instances delete $VM_NAME --quiet
+              gcloud compute disks delete $VM_NAME --quiet
               
       - name: Step 3 - Use the Upload Artifact GitHub Action
         uses: actions/upload-artifact@v2
