--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -78,7 +78,7 @@ jobs:
               cd ${{ inputs.build-path }}
               ls -altr
               VM_NAME=$(cat packer-output.txt | sed -n 's/.*Instance: \([^ ]*\).*/\1/p')
-              ZONE_ID=$(cat packer-output.txt | sed -n -e "s/^.*started in //p")
+              ZONE_ID=$(cat packer-output.txt | sed -n -e "s/^.*Loading zone: //p")
               echo $VM_NAME
               echo $ZONE_ID
               gcloud config set compute/zone $ZONE_ID
