--- a/.github/workflows/delete-zombie.yml
+++ b/.github/workflows/delete-zombie.yml
@@ -19,8 +19,8 @@ jobs:
     - name: List all VMs in the project
       run: |
         while read -r line; do
-          instance_name=$(echo $line | cut -d ' ' -f1)
-          gcloud compute instances list $instance_name > ${instance_name}_disks.txt
-        done < <(gcloud compute instances list --format="text(name)" --filter="name~'packer.*' AND status=RUNNING AND lastStartTimestamp<$(date -u -Iseconds -d '1 mins ago')")
+          echo $line
+          gcloud compute instances describe $line
+        done < <(gcloud compute instances list --format="value(name)" --filter="name~'packer.*' AND status=RUNNING AND lastStartTimestamp<$(date -u -Iseconds -d '1 mins ago')")
         
 
