--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -85,7 +85,7 @@ jobs:
               cat packer-output.txt
               #VM_NAME=$(cat packer-output.txt | sed -n 's/.*Instance: \([^ ]*\).*/\1/p')
               #ZONE=$(cat packer-output.txt | sed 's/.*started in \([^ ]*\).[0m*/\1/')
-          
+              #echo 
               #echo $VM_NAME
               #echo $ZONE
               #gcloud compute instances describe $VM_NAME --zone=$ZONE 
