--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -79,10 +79,12 @@ jobs:
         run: |
               cd ${{ inputs.build-path }}
               ls -altr
+              ps aux | grep packer
               cat packer-output.txt
               echo "sleeping.........."
               sleep 3m
               cat packer-output.txt
+              ps aux | grep packer
               #VM_NAME=$(cat packer-output.txt | sed -n 's/.*Instance: \([^ ]*\).*/\1/p')
               #ZONE=$(cat packer-output.txt | sed 's/.*started in \([^ ]*\).[0m*/\1/')
               #echo 
